--- a/templates/threats_manager/thmg_base.html
+++ b/templates/threats_manager/thmg_base.html
@@ -1,4 +1,4 @@
-{% extends 'threats_manager/thmg_home.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block app_imports %}
     {% block view_imports %}{% endblock %}
