--- a/templates/threats_manager/thmg_home.html
+++ b/templates/threats_manager/thmg_home.html
@@ -12,8 +12,12 @@
                 <div class="col-lg-6 my-3">
                     <div class="card rounded-0">
                         <div class="card-header bg-light">
-                            <h6 class="font-weight-bold mb-0">Last whitelisted Ips
-                            <span class="text-secondary pull-right " data-effect="fadeOut" ><i id="refresh-icon-whitelist" class="fa fa-refresh opacity-30" ></i></span>
+                            <h6 class="font-weight-bold mb-0">Last allowed IPs
+                                <span class="text-secondary pull-right " data-effect="fadeOut">
+                                    <a href="{% url 'thmg_ipaddr_allowed_listview' %}" title="Show full allowed ip list"><i class="fa fa-search opacity-30"></i></a>&nbsp;
+                                    <i id="refresh-icon-whitelist" class="fa fa-refresh opacity-30"></i>
+
+                                </span>
                             </h6>
                         </div>
                         <table id="table-last-whitelist" class="table table-striped table-bordered table-sm">
@@ -24,9 +28,9 @@
                             </thead>
                             <tbody>
                             {% for item in last_whitelisted_ips %}
-                                <tr id="whitelist-id-{{ item.id }}" >
+                                <tr id="whitelist-id-{{ item.id }}">
                                     <td class="text-center ">
-
+                                        <a href="{% url 'thmg_ipaddr_allowed_detailview' item.id %}"><i class="fa fa-eye text-secondary cursor-pointer" title="View details for allowed {{ item.ip }}"></i></a></span>
                                     </td>
                                     <td>
                                         {{ item.ip }}
@@ -64,8 +68,10 @@
                 <div class="col-lg-12 my-3">
                     <div class="card rounded-0">
                         <div class="card-header bg-light">
-                            <h6 class="font-weight-bold mb-0">Last blocked Ips
-                                <span class="text-secondary pull-right " data-effect="fadeOut" ><i id="refresh-icon-blockedlist" class="fa fa-refresh opacity-30"></i></span>
+                            <h6 class="font-weight-bold mb-0">Last blocked IPs
+                                <span class="text-secondary pull-right " data-effect="fadeOut">
+                                    <a href="{% url 'thmg_ipaddr_blocked_listview' %}" title="Show full blocked ip list"><i class="fa fa-search opacity-30"></i></a>&nbsp;
+                                    <i id="refresh-icon-blockedlist" class="fa fa-refresh opacity-30"></i></span>
                             </h6>
 
                         </div>
@@ -81,10 +87,12 @@
                             {% for item in last_blocked_ips %}
                                 <tr id="blockedip-id-{{ item.id }}" class="blocked-ipaddr-{{ item.ip }}">
                                     <td class="text-center ">
+                                        <a href="{% url 'thmg_ipaddr_blocked_listview' %}?ips={{ item.ip }}"><i class="fa fa-search text-primary cursor-pointer" title="Show all sources for {{ item.ip }} in Blocked list"></i></a>&nbsp;
                                         <img class="cursor-pointer img-16px" src="{% static 'images/icons/close.png' %}"
                                              title="Unban IP from source {{ item.source }}"/>
                                         <img class="cursor-pointer img-16px" src="{% static 'images/icons/flame.png' %}"
                                              title="Remove all bans for {{ item.ip }}"/>
+
                                     </td>
                                     <td>
                                         {{ item.ip }}
@@ -197,87 +205,79 @@
 {% block app_js_script %}
     {% block view_js_script %}
         function updateWhiteListedIPs(jQelement) {
-            jQelement.removeClass("opacity-30 cursor-pointer").addClass("fa-spin");
-            let endpoint = "{% url 'thmg_ajax_get_last_allowedips' %}";
-            $.get(endpoint, function(data) {
-                if ( data.result == "KO" ) {
-                    Swal.fire({title:"Error",html:data.message,icon:"error"});
-                } else {
-                    console.log(data);
-                    // Get existent rows
-                    let existent_rows = $("#table-last-whitelist > tbody > tr");
-                    // Add updated rows
-                    $.each(data.last_whitelisted_ips, function(idx,item) {
-                        item.short_description = (item.short_description != null) ? item.short_description: "";
-                        let html = "<tr>";
-                        html+= "<td></td>";
-                        html+= "<td>"+item.ip+"</td>";
-                        html+= "<td>"+item.short_description+"</td>";
-                        html+= "</tr>";
-
-                        let new_row = $(html);
-                        new_row.hide();
-                        $("#table-last-whitelist > tbody").append(html);
-                        new_row.fadeIn("slow");
-                    });
-                    // Delete old rows
-                    $.each(existent_rows, function(idx,item) {
-                        $(item).fadeOut("fast", function() {
-                            $(item).remove();
-                        });
-                    });
-
-
-                }
-            })
-            .fail(function(xhr, status, error) {
-                Swal.fire({title:"Error",html:error,icon:"error"});
-            })
-            .always(function() {
-                setTimeout(function() {
-                    jQelement.removeClass("fa-spin").addClass("opacity-30 cursor-pointer");
-                },1000);
-            });
+        jQelement.removeClass("opacity-30 cursor-pointer").addClass("fa-spin");
+        let endpoint = "{% url 'thmg_ajax_get_last_allowedips' %}";
+        $.get(endpoint, function(data) {
+        if ( data.result == "KO" ) {
+        Swal.fire({title:"Error",html:data.message,icon:"error"});
+        } else {
+        console.log(data);
+        // Get existent rows
+        let existent_rows = $("#table-last-whitelist > tbody > tr");
+        // Add updated rows
+        $.each(data.last_whitelisted_ips, function(idx,item) {
+        item.short_description = (item.short_description != null) ? item.short_description: "";
+        let html = "<tr>";
+            html+= "<td></td>";
+            html+= "<td>"+item.ip+"</td>";
+            html+= "<td>"+item.short_description+"</td>";
+            html+= "</tr>";
+        let new_row = $(html);
+        new_row.hide();
+        $("#table-last-whitelist > tbody").append(html);
+        new_row.fadeIn("slow");
+        });
+        // Delete old rows
+        $.each(existent_rows, function(idx,item) {
+        $(item).fadeOut("fast", function() {
+        $(item).remove();
+        });
+        });
+        }
+        })
+        .fail(function(xhr, status, error) {
+        Swal.fire({title:"Error",html:error,icon:"error"});
+        })
+        .always(function() {
+        setTimeout(function() {
+        jQelement.removeClass("fa-spin").addClass("opacity-30 cursor-pointer");
+        },1000);
+        });
 
         }
 
         $(document).ready(function(){
-            // Adding events
-            $("#refresh-icon-blockedlist").addClass("cursor-pointer");
-            $("#refresh-icon-whitelist").addClass("cursor-pointer");
-            $("#refresh-icon-whitelist").on('click', function() { updateWhiteListedIPs($(this)); });
+        // Adding events
+        $("#refresh-icon-blockedlist").addClass("cursor-pointer");
+        $("#refresh-icon-whitelist").addClass("cursor-pointer");
+        $("#refresh-icon-whitelist").on('click', function() { updateWhiteListedIPs($(this)); });
 
-            $("#form_new_whitelisted_ip").on('submit',function(e) {
-                e.preventDefault();
-                let endpoint = $(this).attr('action');
-                Swal.fire({
-                    title: 'Sending info ',
-                    html: '<img src="{% static 'images/sending.gif' %}">',
-                    showCloseButton: false,
-                    showConfirmButton: false,
-                    allowOutsideClick: false
-                });
-
-                $.post(endpoint, $(this).serialize())
-                .done(function(data) {
-                    if ( data.result == "OK" ) {
-                        Swal.close();
-{#                        Swal.fire({title:"Correcto",html:data.message,icon:"success"});#}
-                        $('#form_new_whitelisted_ip').trigger("reset");
-                        $('#addNewWhiteListedIPModal').modal('hide');
-                        updateWhiteListedIPs($("#refresh-icon-whitelist"));
-
-                    } else {
-                        Swal.fire({title:"Error",html:data.message,icon:"error"});
-                    }
-                })
-                .fail(function(xhr, status, error) {
-                    Swal.fire({title:"Error",html:error,icon:"error"});
-                });
-            });
+        $("#form_new_whitelisted_ip").on('submit',function(e) {
+        e.preventDefault();
+        let endpoint = $(this).attr('action');
+        Swal.fire({
+        title: 'Sending info ',
+        html: '<img src="{% static 'images/sending.gif' %}">',
+        showCloseButton: false,
+        showConfirmButton: false,
+        allowOutsideClick: false
         });
 
-
-
+        $.post(endpoint, $(this).serialize())
+        .done(function(data) {
+        if ( data.result == "OK" ) {
+        Swal.close();
+        $('#form_new_whitelisted_ip').trigger("reset");
+        $('#addNewWhiteListedIPModal').modal('hide');
+        updateWhiteListedIPs($("#refresh-icon-whitelist"));
+        } else {
+        Swal.fire({title:"Error",html:data.message,icon:"error"});
+        }
+        })
+        .fail(function(xhr, status, error) {
+        Swal.fire({title:"Error",html:error,icon:"error"});
+        });
+        });
+        });
     {% endblock %}
 {% endblock %}
